test/cases/compile_errors/stage1/obj/bitCast_to_enum_type.zig
export fn entry() void {
    const y = @bitCast(enum(u32) { a, b }, @as(u32, 3));
    _ = y;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:24: error: cannot cast a value of type 'y'
